fix: overflow-y on body

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
   justify-content: space-between;
   background-color: rgb(var(--background));
   color: rgb(var(--foreground));
-  min-height: 100dvh;
+  height: 100dvh;
   overflow-x: hidden;
 }
 
